<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_content"
    tools:context=".fragments.creditCard.NewCreditCardCvvFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/add_card"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:layout_width="296dp"
            android:layout_height="176dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/label_number_credit_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/credit_card_back" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_cvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="34dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_medium" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/label_number_credit_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cvv"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_small_x"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card1" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_number_credit_card">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="000"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="3"
                android:maxLines="1"
                android:textSize="@dimen/text_size_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_back_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            style="@style/MaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advance"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>