<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_content"
    tools:context=".fragments.order.ValueEstimatOrderFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/search_store"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">


                    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/img"
                        android:layout_width="@dimen/img_item_size_order"
                        android:layout_height="@dimen/img_item_size_order"
                        android:padding="4dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_camera_outline"
                        app:riv_corner_radius="4dip"
                        app:riv_mutate_background="true" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp">


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textSize="@dimen/text_size_small_x"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            app:layout_constraintBottom_toTopOf="@id/address"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:textSize="@dimen/text_size_small"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/name" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/inform_value_estimat_order"
            android:textSize="@dimen/text_size_small_x"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card1" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_result">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/estimate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/currency_real"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:lines="6"
                android:maxLines="16"
                android:textSize="@dimen/text_size_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_back_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@id/advance"
            style="@style/MaterialButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_outline"
            android:text="@string/advance"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>